kubernetes/vllm-serve/watt-8b/vllm.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: watt-8b
  labels:
    app: watt-8b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watt-8b
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: watt-8b
    spec:
      volumes:
        - name: hf-cache
          emptyDir: {}
        - name: triton
          emptyDir: {}
        - name: chat-template
          configMap:
            name: llama31-template
            defaultMode: 420
        - name: config
          emptyDir: {}
      containers:
        - resources:
            limits:
              nvidia.com/gpu: '1'
          terminationMessagePath: /dev/termination-log
          name: watt-8b
          ports:
            - containerPort: 8000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: hf-cache
              mountPath: /.cache
            - name: triton
              mountPath: /.triton
            - name: chat-template
              mountPath: /app
            - name: config
              mountPath: /.config
          terminationMessagePolicy: File
          image: 'vllm/vllm-openai:v0.7.3'
          args:
            - '--model'
            - watt-ai/watt-tool-8B
            - '--max-num-batched-tokens'
            - '2048'
            - '--enable-auto-tool-choice'
            - '--chat-template'
            - /app/tool_chat_template_llama3.1_json.jinja
            - '--tool-call-parser'
            - llama3_json
            - '--port'
            - '8000'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: wrk-5
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
