kubernetes/vllm-serve/watt-8b/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: watt-8b
  labels:
    app: watt-8b
spec:
  to:
    kind: Service
    name: watt-8b
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
